build: update docker

--- a/deploy/Dockerfile
+++ b/deploy/Dockerfile
@@ -1,4 +1,4 @@
-ARG PYTHON_VERSION=3.10
+ARG PYTHON_VERSION=3.11
 FROM python:${PYTHON_VERSION}-slim AS base
 
 ENV PYTHONDONTWRITEBYTECODE=1 \
@@ -6,27 +6,24 @@ ENV PYTHONDONTWRITEBYTECODE=1 \
     PIP_NO_CACHE_DIR=1
 
 RUN apt-get update && apt-get install -y --no-install-recommends \
-    build-essential \
     curl \
-    git \
-    ffmpeg \
-    libportaudio2 portaudio19-dev libasound2-dev libsndfile1 \
  && rm -rf /var/lib/apt/lists/*
 
+
 # Install uv for fast, deterministic installs from pyproject/uv.lock
-RUN curl -LsSf https://astral.sh/uv/install.sh | sh
+RUN curl -LsSf https://astral.sh/uv/install.sh | sh -s -- -y
 ENV PATH="/root/.local/bin:${PATH}"
 
 WORKDIR /app
 
-# Only copy project metadata first to maximize layer cache
+# Expect build context at project root. Copy only metadata first to leverage cache.
 COPY pyproject.toml uv.lock ./
 
-# Install dependencies in a project-local venv (.venv)
+# Install dependencies into a local venv
 RUN uv sync --frozen --no-dev --python python
 
-# Now copy the full source
-COPY . .
+# Copy the full project into the image
+COPY src ./src
 
 EXPOSE 8000
 
