--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -11,7 +11,7 @@ env:
 jobs:
   deploy:
     runs-on: ubuntu-latest
-    environment: staging
+    environment: production
 
     steps:
     - name: Checkout
@@ -22,17 +22,19 @@ jobs:
 
     - name: Build Docker image (tar)
       run: |
-        docker build -t $PROJECT_NAME:dev -f Dockerfile .
-        docker save $PROJECT_NAME:dev -o image.tar
+        docker build -t $PROJECT_NAME:prod -f deploy/Dockerfile .
+        docker save $PROJECT_NAME:prod -o image.tar
 
-    - name: Copy image to EC2
+    - name: Copy artifacts to EC2
       uses: appleboy/scp-action@v0.1.7
       with:
         host: ${{ secrets.EC2_HOST }}
         username: ${{ secrets.EC2_USERNAME }}
         key: ${{ secrets.EC2_PRIVATE_KEY }}
         port: 22
-        source: "image.tar"
+        source: |
+          image.tar
+          deploy/docker-compose.yml
         target: "/home/ubuntu/${{ env.PROJECT_NAME }}/"
 
     - name: Deploy via SSH
@@ -43,20 +45,15 @@ jobs:
         key: ${{ secrets.EC2_PRIVATE_KEY }}
         port: 22
         script: |
-          cd /home/ubuntu/${PROJECT_NAME} || git clone https://github.com/johnPa02/${PROJECT_NAME}.git
-          cd ${PROJECT_NAME}
-          git fetch origin
-          git checkout main
-          git pull origin main
-
+          cd /home/ubuntu/${PROJECT_NAME}
+          
           docker load -i image.tar
 
-          # Write env file safely
           printf "%s" "${{ secrets.ENV_FILE }}" > .env
 
           # Restart containers
-          docker compose down --remove-orphans || true
-          docker compose up -d
+          docker compose -f docker-compose.yml down --remove-orphans || true
+          docker compose -f docker-compose.yml up -d
 
           echo "⏳ Waiting for service to become healthy..."
           for i in {1..12}; do
