--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -24,6 +24,7 @@ jobs:
       run: |
         docker build -t $PROJECT_NAME:prod -f deploy/Dockerfile .
         docker save $PROJECT_NAME:prod -o image.tar
+        ls -lh
 
     - name: Copy artifacts to EC2
       uses: appleboy/scp-action@v0.1.7
@@ -33,8 +34,8 @@ jobs:
         key: ${{ secrets.EC2_PRIVATE_KEY }}
         port: 22
         source: |
-          image.tar
-          deploy/docker-compose.yml
+          ./image.tar
+          ./deploy/docker-compose.yml
         target: "/home/ubuntu/${{ env.PROJECT_NAME }}/"
 
     - name: Deploy via SSH
