--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -33,9 +33,7 @@ jobs:
         username: ${{ secrets.EC2_USERNAME }}
         key: ${{ secrets.EC2_PRIVATE_KEY }}
         port: 22
-        source: |
-          ./image.tar
-          ./deploy/docker-compose.yml
+        source: "./image.tar ./deploy/*"
         target: "/home/ubuntu/${{ env.PROJECT_NAME }}/"
 
     - name: Deploy via SSH
