--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -33,8 +33,12 @@ jobs:
         username: ${{ secrets.EC2_USERNAME }}
         key: ${{ secrets.EC2_PRIVATE_KEY }}
         port: 22
-        source: "./image.tar ./deploy/*"
+        source: |
+          ./image.tar
+          ./deploy/
         target: "/home/ubuntu/${{ env.PROJECT_NAME }}/"
+        overwrite: true
+        debug: true
 
     - name: Deploy via SSH
       uses: appleboy/ssh-action@v1.0.0
