--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -26,22 +26,14 @@ jobs:
         docker save $PROJECT_NAME:prod -o image.tar
         ls -lh
 
-    - name: Verify build artifacts
+    - name: Copy artifacts manually
       run: |
-        pwd
-        ls -lh
-        ls -lh deploy
+        scp -i <(echo "${{ secrets.EC2_PRIVATE_KEY }}") -o StrictHostKeyChecking=no \
+          image.tar ${{ secrets.EC2_USERNAME }}@${{ secrets.EC2_HOST }}:/home/ubuntu/${{ env.PROJECT_NAME }}/
+    
+        scp -i <(echo "${{ secrets.EC2_PRIVATE_KEY }}") -o StrictHostKeyChecking=no \
+          deploy/* ${{ secrets.EC2_USERNAME }}@${{ secrets.EC2_HOST }}:/home/ubuntu/${{ env.PROJECT_NAME }}/deploy/
 
-    - name: Copy artifacts to EC2
-      uses: appleboy/rsync-action@v0.2.0
-      with:
-        host: ${{ secrets.EC2_HOST }}
-        username: ${{ secrets.EC2_USERNAME }}
-        key: ${{ secrets.EC2_PRIVATE_KEY }}
-        port: 22
-        source: "image.tar deploy/"
-        target: "/home/ubuntu/${{ env.PROJECT_NAME }}/"
-        debug: true
 
 
     - name: Deploy via SSH
