--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -26,7 +26,7 @@ jobs:
         key: ${{ secrets.EC2_PRIVATE_KEY }}
         port: 22
         script: |
-          cd /home/ubuntu/${PROJECT_NAME} || https://github.com/johnPa02/elevenlabs-ai.git
+          cd /home/ubuntu/${PROJECT_NAME} || git clone https://github.com/johnPa02/elevenlabs-ai.git
           cd ${PROJECT_NAME}
           git fetch origin
           git checkout main
